<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".ui.signup.SignUpActivity">
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            
            <ImageView
                android:id="@+id/ivProfilePicASUP"
                android:layout_gravity="center_vertical"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"/>



            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:textColorHint="@color/gray_clr"
                app:hintTextAppearance="@style/EditTextLabel"
                android:layout_marginEnd="@dimen/_20sdp">

                <EditText
                    android:id="@+id/edtTvFirstNameASUP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name_ttl"
                    android:textColorHint="@color/gray_clr"
                    android:imeOptions="actionNext"
                    android:inputType="textCapSentences|textCapWords"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13ssp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
               android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_height="wrap_content"
                android:textColorHint="@color/gray_clr"
                app:hintTextAppearance="@style/EditTextLabel"
                android:layout_marginEnd="@dimen/_20sdp">

                <EditText
                    android:id="@+id/edtTvLastNameASUP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name_ttl"
                    android:textColorHint="@color/gray_clr"
                    android:imeOptions="actionNext"
                    android:inputType="textCapSentences|textCapWords"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13ssp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_height="wrap_content"
                android:textColorHint="@color/gray_clr"
                app:hintTextAppearance="@style/EditTextLabel"
                android:layout_marginEnd="@dimen/_20sdp">

                <EditText
                    android:id="@+id/edtTvEmailASUP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_ttl"
                    android:textColorHint="@color/gray_clr"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13ssp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_height="wrap_content"
                android:textColorHint="@color/gray_clr"
                app:hintTextAppearance="@style/EditTextLabel"
                android:layout_marginEnd="@dimen/_20sdp">

                <EditText
                    android:id="@+id/edtTvPhoneSUP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_no_ttl"
                    android:textColorHint="@color/gray_clr"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13ssp" />

            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_height="wrap_content"
                android:textColorHint="@color/gray_clr"
                app:hintTextAppearance="@style/EditTextLabel"
                android:layout_marginEnd="@dimen/_20sdp">

                <EditText
                    android:id="@+id/edtTvPasswordSUP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_ttl"
                    android:textColorHint="@color/gray_clr"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13ssp" />

            </com.google.android.material.textfield.TextInputLayout>



            <TextView
                android:id="@+id/tvSex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ltvDOB"
                android:layout_marginStart="@dimen/_22sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:hint="@string/gender_ttl"
                android:textColor="@color/gray_clr"
                android:textSize="@dimen/_11ssp" />

            <RelativeLayout
                android:id="@+id/rlSex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvSex"
                android:layout_marginStart="@dimen/_22sdp"
                android:layout_marginEnd="@dimen/_20sdp">

                <RadioGroup
                    android:id="@+id/rdoGrpSexASUP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioFeMaleASUP"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:button="@drawable/checkbox_bg"
                        android:checked="true"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/female_ttl"
                        android:textSize="@dimen/_11ssp" />

                    <RadioButton
                        android:id="@+id/radioMaleASUP"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:background="@null"
                        android:button="@drawable/checkbox_bg"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/male_ttl"
                        android:textSize="@dimen/_11ssp" />


                </RadioGroup>


            </RelativeLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_height="wrap_content"
                android:textColorHint="@color/gray_clr"
                app:hintTextAppearance="@style/EditTextLabel"
                android:layout_marginEnd="@dimen/_20sdp">

                <EditText
                    android:id="@+id/edtTvAddressSUP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address_ttl"
                    android:textColorHint="@color/gray_clr"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13ssp" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>
        
    </ScrollView>
    

</androidx.constraintlayout.widget.ConstraintLayout>