<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".ui.login.LoginActivity">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvLytEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:textColorHint="@color/gray_clr"
        app:hintTextAppearance="@style/EditTextLabel">

        <EditText
            android:id="@+id/edtTvEmailAL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_ttl"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/gray_clr"
            android:textSize="@dimen/_13ssp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvLytEmail"
        app:passwordToggleDrawable="@drawable/show_password_selector"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:textColorHint="@color/gray_clr"
        app:hintTextAppearance="@style/EditTextLabel"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPrimary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtTvPassWrdAL"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:drawablePadding="5dp"
            android:hint="Password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textColorHint="@color/gray_clr"
            android:textSize="@dimen/_13ssp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_below="@+id/layoutTextInput"
        android:onClick="loginClick"
        android:id="@+id/tvSignInAL"
        android:layout_centerHorizontal="true"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@color/black"
        android:layout_gravity="center_horizontal"
        android:elevation="@dimen/_8sdp"
        android:gravity="center"
        android:paddingBottom="@dimen/_5sdp"
        android:text="@string/login_ttl"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        android:visibility="visible" />

    <RelativeLayout
        android:layout_centerHorizontal="true"
        android:id="@+id/rlNewUserMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvSignInAL"
        android:layout_marginTop="@dimen/_25sdp">

        <TextView
            android:onClick="signupOpen"
            android:id="@+id/tvDontHwAcntAL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/don_t_hv_account"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp" />

    </RelativeLayout>

</RelativeLayout>